@@ -1,5 +1,8 @@
 package org.mmisw.vine.gwt.client;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import org.mmisw.vine.gwt.client.rpc.OntologyInfo;
 
 import com.google.gwt.user.client.ui.CellPanel;
@@ -19,6 +22,7 @@ public class SearchVocabularySelection extends VerticalPanel {
 	
 	private CellPanel buttons = new HorizontalPanel();
 	
+	
 	SearchVocabularySelection(int searchIndex) {
 		super();
 		CellPanel hp = new HorizontalPanel();
@@ -34,11 +38,28 @@ public class SearchVocabularySelection extends VerticalPanel {
 		
 	}
 	
+	/**
+	 * Returns a list of the Main.workingUris that are selected for search.
+	 * @return
+	 */
+	List<OntologyInfo> getSelectedVocabularies() {
+		List<OntologyInfo> selectedUris = new ArrayList<OntologyInfo>();
+		int count = buttons.getWidgetCount();
+		assert count == Main.getWorkingUris().size();
+		
+		for ( int i = 0; i < count; i++ ) {
+			if ( ((ToggleButton) buttons.getWidget(i)).isDown() ) {
+				selectedUris.add( Main.getWorkingUris().get(i) );
+			}
+		}
+		return selectedUris;
+	}
+
 	void setToggleButtons(int searchIndex) {
 		buttons.clear();
-		char id = 'A';
 		int idx = 0;
-		for ( OntologyInfo s : Main.workingUris ) {
+		for ( OntologyInfo s : Main.getWorkingUris() ) {
+			char id = s.getCode();
 			final ToggleButton sel = new ToggleButton("" +id);
 			sel.setTitle(s.getDisplayLabel());
 			sel.addClickListener(new ClickListener() {
@@ -51,7 +72,6 @@ public class SearchVocabularySelection extends VerticalPanel {
 				sel.setDown(true);
 			}
 			
-			id++;
 			idx++;
 		}
 		
